--- a/Day04/Day04.csproj
+++ b/Day04/Day04.csproj
@@ -15,21 +15,20 @@
       <None Update="sample.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="sample1.txt">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-      <None Update="sample2.txt">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-      <None Update="sample3.txt">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-      <None Update="sample4.txt">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-      <None Update="sample5.txt">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
     </ItemGroup>
+
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>Aoc</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\AocHelper\AocHelper.csproj" />
+    </ItemGroup>
+
+    <PropertyGroup>
+      <NoWarn>$(NoWarn);IDE0305;IDE0306;IDE0090;IDE0060;IDE0057;IDE0044;IDE0300;IDE0290;IDE0028</NoWarn>
+    </PropertyGroup>
 
 </Project>
